--- a/Luciana_Saavedra_Ayarde_Práctica_Intrducción_a_la_Programación.ipynb
+++ b/Luciana_Saavedra_Ayarde_Práctica_Intrducción_a_la_Programación.ipynb
@@ -3,9 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMtwASgcBrCbrRXa+4YQGlT",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/luciana-saavedra/psg-sesion2/blob/main/Luciana_Saavedra_Ayarde_Pr%C3%A1ctica_Intrducci%C3%B3n_a_la_Programaci%C3%B3n.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
